# mediasoup-client-android

./: .cirrus.yml  .gitattributes  .gitignore  .travis.yml  LICENSE  README.md  build.gradle  gradle.properties  settings.gradle
gradle/wrapper/: gradle-wrapper.properties
mediasoup-client/: CMakeLists.txt  build.gradle  gradle.properties
mediasoup-client/scripts/: format.sh  get-dep.sh  jni-generator.sh
mediasoup-client/src/androidTest/: AndroidManifest.xml
mediasoup-client/src/androidTest/java/org/mediasoup/droid/: BaseTest.java  DeviceTest.java  ExampleInstrumentedTest.java  FakeTransportListener.java  LoggerTest.java  MediasoupClientTest.java  PeerConnectionTest.java  PeerConnectionUtils.java  Utils.java
mediasoup-client/src/androidTest/java/org/mediasoup/droid/data/: Parameters.java
mediasoup-client/src/androidTest/jni/: parameters_jni.cpp
mediasoup-client/src/main/: AndroidManifest.xml
mediasoup-client/src/main/java/org/mediasoup/droid/: Consumer.java  DataConsumer.java  DataProducer.java  Device.java  Handler.java  Logger.java  MediasoupClient.java  MediasoupException.java  Ortc.java  PeerConnection.java  Producer.java  RecvTransport.java  ScalabilityMode.java  SendTransport.java  Transport.java
mediasoup-client/src/main/java/org/mediasoup/droid/hack/: Utils.java
mediasoup-client/src/main/java/org/mediasoup/droid/sdp/: RemoteSdp.java
mediasoup-client/src/main/java/org/webrtc/: RTCUtils.java
mediasoup-client/src/main/jni/: consumer_jni.cpp  data_consumer_jni.cpp  data_producer_jni.cpp  device_jni.cpp  java_types.cpp  jni_generator_helper.cpp  jni_onload.cpp  logger_jni.cpp  mediasoup_client_jni.cpp  peerconnection_jni.cpp  producer_jni.cpp  scoped_java_ref.cpp  transport_jni.cpp
mediasoup-client/src/main/jni/generated_mediasoupclient_jni/jni/: Consumer_jni.h  DataConsumer_jni.h  DataProducer_jni.h  Device_jni.h  Logger_jni.h  MediasoupClient_jni.h  Parameters_jni.h  PeerConnection_jni.h  Producer_jni.h  RecvTransport_jni.h  SendTransport_jni.h  Transport_jni.h
mediasoup-client/src/main/jni/include/: common_jni.h  consumer_jni.h  data_consumer_jni.h  data_producer_jni.h  java_types.h  jni_generator_helper.h  peerconnection_jni.h  producer_jni.h  scoped_java_ref.h  transport_jni.h
mediasoup-client/src/main/jni/test/: parameters_jni.cpp
mediasoup-client/src/main/res/values/: strings.xml
mediasoup-client/src/test/java/org/mediasoup/droid/: ExampleUnitTest.java
